[package]
name = "spotify-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
